--- a/package.json
+++ b/package.json
@@ -55,13 +55,19 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "base-64": "^0.1.0",
     "cross-env": "^5.2.0",
+    "fs": "0.0.1-security",
     "lodash": "^4.17.11",
     "lodash.clonedeep": "^4.5.0",
+    "os": "^0.1.1",
+    "path": "^0.12.7",
+    "randomstring": "^1.1.5",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "request": "^2.88.0"
   }
 }
