--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
   },
   "dependencies": {
     "base-64": "^0.1.0",
+    "chokidar": "^2.1.2",
     "cross-env": "^5.2.0",
     "fs": "0.0.1-security",
+    "fs-extra": "^7.0.1",
     "lodash": "^4.17.11",
     "lodash.clonedeep": "^4.5.0",
     "os": "^0.1.1",
