--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.4",
     "chai": "^4.2.0",
     "css-loader": "^1.0.0",
@@ -46,7 +46,7 @@
     "electron-packager": "^13.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.6.0",
+    "jest": "^24.1.0",
     "mini-css-extract-plugin": "^0.4.4",
     "regenerator-runtime": "^0.12.1",
     "standard": "^12.0.1",
@@ -60,6 +60,7 @@
     "cross-env": "^5.2.0",
     "fs": "0.0.1-security",
     "fs-extra": "^7.0.1",
+    "lockfile": "^1.0.4",
     "lodash": "^4.17.11",
     "lodash.clonedeep": "^4.5.0",
     "os": "^0.1.1",
@@ -70,6 +71,7 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "wait-on": "^3.2.0"
   }
 }
